[package]
name = "coldpiler_codegen"
version = "0.1.0"
authors = ["Rossi Lorenzo <snowycoder@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"
lazy_static = "1.4"

coldpiler_parser = { path = "../coldpiler_parser", features = ["codegen"] }
coldpiler_util = { path = "../coldpiler_util" }

