[package]
name = "coldpiler_parser"
version = "0.1.0"
authors = ["Rossi Lorenzo <snowycoder@gmail.com>"]
edition = "2018"

[features]
default = []

codegen = ["proc-macro2", "quote"]

[dependencies]
proc-macro2 = { version = "1.0", optional = true }
quote = { version = "1.0", optional = true }

[dev-dependencies]
